--- a/src/main/resources/templates/sala.html
+++ b/src/main/resources/templates/sala.html
@@ -85,8 +85,7 @@
 						</div>
 
 						<div class="form-group col-md-4">
-							<button type="submit" name="action"
-								class="btn btn-success btn-lg btn-block">Adicionar Sala</button>
+							<button type="submit" name="action"	class="btn btn-success btn-lg btn-block">Adicionar Sala</button>
 						</div>
 					</fieldset>
 					<!-- col-sm-12 -->
@@ -131,6 +130,5 @@
 
 	</div>
 	<!-- container MOSTRAR SESSOES-->
-
 </body>
 </html>
